<resources>
    <string name="app_name">NoNequi</string>
    <string name="nameIcon">NoNequi</string>
    <string name="welcomeText">¡Welcome to NoNequi!</string>
    <string name="subtitle">The best transfer application</string>
    <string name="buttonLogin">SIGN IN</string>
    <string name="signUpButton">SIGN UP</string>
    <string name="signUpTitle">SIGN UP</string>
    <string name="signInTitle">SIGN IN </string>
    <string name="textSignIn">Enter your Username and Password</string>
    <string name="textSignUp">Enter your Credentials</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dontHaveAccount">Do not have an account?</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="username">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="field_empty">Field cannot be empty</string>
    <string name="register_successfully">Register successfully</string>
    <string name="password_same">Passwords must be the same in all fields.</string>
    <string name="incorrect_pass">Incorrect Password</string>
    <string name="register_failed">Register Failed</string>
    <string name="email_used">This email has already used</string>
    <string name="valid_email">Please enter a valid email address</string>
    <string name="user_used">This user has already used</string>
    <string name="login_successfully">Login Successfully</string>
    <string name="login_failed">Login Failed</string>
    <string name="number_not_exists">This number does not exists</string>
    <string name="pass_regex_mayus">Password must contain at least one upper case character</string>
    <string name="pass_regex_minus">Password must contain at least one lower case character</string>
    <string name="pass_regex_number">Password must contain at least one number</string>
    <string name="pass_regex_special_char">Password must contain at least one special character</string>
    <string name="pass_regex_spaces">Password cannot contain spaces</string>
    <string name="pass_regex_length">Password must contain at least 8 or more characters</string>
    <string name="confirm_exit">Are you sure you want to leave?</string>
    <string name="confirm_dialog">Confirm</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="logout">More</string>
    <string name="content_description_logout">Logout</string>
    <string name="remember_password">Remember Password</string>
    <string name="back_button_pressed_message">Press the Back button again to exit</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_used">This phone number has already used</string>
    <string name="user_regex_number">The user shouldn\'t contain numbers</string>
    <string name="hi">Hi,</string>
    <string name="phone_number_length">El phone number must contain 10 numbers</string>
    <string name="send_money">Send Money</string>
    <string name="credit_card">Credit Card</string>
    <string name="history">History</string>
    <string name="history_transaction">History of Transaction</string>
    <string name="nonequi_card">NoNequi Credit Card</string>
    <string name="money_available">Money Available</string>
    <string name="how_much">How much money?</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="insufficient_money">Insufficient money for this transaction</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="transaction_success">Transaction Succes</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="by">By</string>
    <string name="for_text">For</string>
    <string name="your_number">This is your number. You cannot send money to yourself</string>
    <string name="many_money">I don´t think you have that much money</string>
    <string name="send_cero">Do you want to send 0$?</string>
    <string name="history_empty">History is empty</string>
    <string name="minimum_transaction">Minimun Transaction: 2500$</string>
    <string name="user_length">"Name must be contain minimum 8 characters "</string>
</resources>