<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignIn"
    android:background="@color/backgroundColor"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="124dp"
            android:layout_height="104dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/signInButtonSI"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_button_fill"
            android:text="@string/buttonLogin"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.721" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/textSignIn"
            android:textColor="#7A7A7A"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingHorizontal="20dp"
            android:textColorHint="#B8B8B8"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputPhoneNumber"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="108dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/subtitle"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/signInTitle"
            android:textColor="#4C4C4C"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputPhoneNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:textColorHint="#B8B8B8"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"
            app:startIconDrawable="@android:drawable/stat_sys_phone_call">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/subtitle"
                tools:ignore="SpeakableTextPresentCheck"
                tools:layout_editor_absoluteX="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/techno_hideo"
            android:text="@string/nameIcon"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="164dp"
            android:layout_marginEnd="14dp"
            android:text="@string/dontHaveAccount"
            android:textColor="#B8B8B8"
            app:layout_constraintEnd_toStartOf="@+id/signUpClickableText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputPassword" />

        <TextView
            android:id="@+id/signUpClickableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/signUpTitle"
            android:textColor="#4C4C4C"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>