<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="Login.signUp"
    android:background="@color/backgroundColor"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputPhoneNumberSP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:paddingHorizontal="20dp"
            android:textColorHint="#B8B8B8"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputUserNameSP"
            app:layout_constraintBottom_toTopOf="@id/InputPasswordSP"
            app:startIconDrawable="@android:drawable/stat_sys_phone_call">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@+id/subtitle"
                tools:layout_editor_absoluteX="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="124dp"
            android:layout_height="104dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="7dp"
            android:src="@mipmap/logo"
            app:layout_constraintBottom_toTopOf="@+id/appName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/textSignUp"
            android:textColor="#7A7A7A"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/InputEmailSP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputEmailSP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColorHint="#B8B8B8"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/InputUserNameSP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/subtitle"
                tools:layout_editor_absoluteX="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputUserNameSP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingHorizontal="20dp"
            android:textColorHint="#B8B8B8"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:layout_constraintTop_toBottomOf="@+id/InputEmailSP"
            app:layout_constraintBottom_toTopOf="@id/InputPhoneNumberSP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/subtitle"
                tools:layout_editor_absoluteX="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/signUpTitle"
            android:textColor="#4C4C4C"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/techno_hideo"
            android:text="@string/nameIcon"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/titleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputPasswordSP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingHorizontal="20dp"
            android:textColorHint="#B8B8B8"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:layout_constraintTop_toBottomOf="@+id/InputPhoneNumberSP"
            app:layout_constraintBottom_toTopOf="@id/InputRPasswordSP"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="424dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/subtitle"
                tools:layout_editor_absoluteX="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/InputRPasswordSP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:paddingHorizontal="20dp"
            android:textColorHint="#B8B8B8"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:layout_constraintTop_toBottomOf="@+id/InputPasswordSP"
            tools:layout_editor_absoluteY="505dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/subtitle"
                tools:layout_editor_absoluteX="0dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/haveAccount"
            android:textColor="#B8B8B8"
            app:layout_constraintEnd_toStartOf="@+id/signInClickableText"
            app:layout_constraintTop_toBottomOf="@id/InputRPasswordSP" />

        <Button
            android:id="@+id/signUpButtonSP"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/style_button_fill"
            android:text="@string/signUpButton"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/constraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/signInClickableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="48dp"
            android:text="@string/signInTitle"
            android:textColor="#4C4C4C"
            app:layout_constraintEnd_toEndOf="@+id/InputRPasswordSP"
            app:layout_constraintTop_toBottomOf="@+id/InputRPasswordSP" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>