<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Interfaces.SendMoney.SendMoney">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutSM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolBarColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBarSM"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolBarColor"
            app:navigationIcon="@drawable/arrow_back"
            app:title="@string/send_money"
            app:titleTextColor="#4C4C4C" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textViewMoneyAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/money_available"
        android:textColor="#4C4C4C"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayoutSM" />

    <TextView
        android:id="@+id/textViewDollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="$"
        android:textSize="16sp"
        android:textColor="#4C4C4C"
        app:layout_constraintStart_toStartOf="@+id/textViewMoneyAvailable"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoneyAvailable" />

    <TextView
        android:id="@+id/textViewMoneySM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:paddingStart="3dp"
        android:text=""
        android:textSize="16sp"
        android:textColor="#4C4C4C"
        app:layout_constraintStart_toEndOf="@+id/textViewDollar"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoneyAvailable" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputPhoneNumberSM"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:hint="@string/phone_number"
        android:paddingHorizontal="20dp"
        android:textColorHint="#B8B8B8"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMoneySM"
        app:startIconDrawable="@android:drawable/stat_sys_phone_call">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:inputType="number"
            android:minHeight="48dp"
            android:maxLength="10"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputMoneyToSendSM"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/how_much"
        android:paddingHorizontal="20dp"
        android:textColorHint="#B8B8B8"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputPhoneNumberSM"
        app:startIconDrawable="@drawable/dollar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:minHeight="48dp"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="659dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendMoneyButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/style_button"
        android:text="@string/transfer_money"
        android:textColor="@color/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>